Added Machine learning Support
Added Machine Learning Support to identify political post

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+text-analyzer-server=http://127.0.0.1:8000/api
 spring.datasource.url=jdbc:postgresql://localhost:5432/blog
 spring.datasource.username=postgres
 spring.datasource.password=10242048
