add properties file on test

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,5 +1,5 @@
 text-analyzer-server=http://127.0.0.1:8000/api
-spring.datasource.url=jdbc:postgresql://localhost:5432/social_media
+spring.datasource.url=jdbc:postgresql://localhost:5432/social_media_test
 spring.datasource.username=postgres
 spring.datasource.password=10242048
 spring.jpa.hibernate.ddl-auto=update
