--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,9 +1,7 @@
 text-analyzer-server=http://127.0.0.1:8000/api
-spring.datasource.url=jdbc:postgresql://localhost:5432/social_media_test
-spring.datasource.username=postgres
-spring.datasource.password=10242048
+spring.datasource.url=jdbc:h2:mem:social_media_testdb
+spring.datasource.username=sa
+spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=false
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
