add fixture and fix all the cases of medal and integration test

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,7 +1,12 @@
-text-analyzer-server=http://127.0.0.1:8000/api
-spring.datasource.url=jdbc:h2:mem:social_media_testdb
-spring.datasource.username=sa
-spring.datasource.password=password
+text-analyzer-server=http://127.0.0.1:8005/api
+#spring.datasource.url=jdbc:h2:mem:social_media_testdb
+spring.datasource.url=jdbc:postgresql://localhost:5432/social_media_test
+#spring.datasource.username=sa
+#spring.datasource.password=password
+spring.datasource.username=postgres
+spring.datasource.password=10242048
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
-
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=true
