add docker file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-text-analyzer-server=http://127.0.0.1:8000/api
-spring.datasource.url=jdbc:postgresql://localhost:5432/social_media
+text-analyzer-server=http://text-analyzer:8000/api
+spring.datasource.url=jdbc:postgresql://db:5432/social_media
 spring.datasource.username=postgres
 spring.datasource.password=10242048
 spring.jpa.hibernate.ddl-auto=update
