remove unecessary lines

--- a/pom.xml
+++ b/pom.xml
@@ -132,6 +132,7 @@
                 </configuration>
                 <executions>
                     <execution>
+                        <?m2e execute onConfiguration?>
                         <id>process-test-classes</id>
                         <phase>process-test-classes</phase>
                         <goals>
