--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,6 +1,6 @@
 text-analyzer-server=http://text-analyzer:8000/api
 #spring.datasource.url=jdbc:h2:mem:social_media_testdb
-spring.datasource.url=jdbc:postgresql://db:5432/social_media_test
+spring.datasource.url=jdbc:postgresql://app-database:5432/social_media_test
 #spring.datasource.username=sa
 #spring.datasource.password=password
 spring.datasource.username=postgres
